GPencil: When you insert keyframe on timeline, viewport doesn't get updated. #77997

Closed
opened 2020-06-18 15:13:09 +02:00 by guzu · 9 comments

System Information
Operating system: Mac (mini late 2014)
Graphics card: Intel Iris

Blender Version
Broken: 2.83
Worked: None
Short description of error
Viewport stays the same when you insert a keyframe in the grease pencil layer. When you draw and undo, it gets updated.

Exact steps for others to reproduce the error

  • Make new Grease pencil
  • Draw on first frame
  • Go to DopeSheet -> Grease pencil
  • Go to next frame (Frame 2)
  • Press I to insert a key frame
  • What is expected is that you have an empty frame. To prove it:
  • Go to next frame (Frame 3)
  • Draw something
  • Go to previous frame where you added a keyframe (Frame 2)
    Now it is empty!
**System Information** Operating system: Mac (mini late 2014) Graphics card: Intel Iris **Blender Version** Broken: 2.83 Worked: None **Short description of error** Viewport stays the same when you insert a keyframe in the grease pencil layer. When you draw and undo, it gets updated. **Exact steps for others to reproduce the error** - Make new Grease pencil - Draw on first frame - Go to DopeSheet -> Grease pencil - Go to next frame (Frame 2) - Press I to insert a key frame - What is expected is that you have an empty frame. To prove it: - Go to next frame (Frame 3) - Draw something - Go to previous frame where you added a keyframe (Frame 2) Now it is empty!
Author

Added subscriber: @guzu

Added subscriber: @guzu

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2020-06-18 16:06:21 +02:00

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you verify you have the onion skin disabled? I have checked and the frame is updated.

Can you verify you have the onion skin disabled? I have checked and the frame is updated.
Author

Have a look:
0001-0340.mp4

Have a look: [0001-0340.mp4](https://archive.blender.org/developer/F8631529/0001-0340.mp4)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@guzu I see now, I was using the Insert Key Frame operator, not the Insert Channel.

@guzu I see now, I was using the Insert Key Frame operator, not the Insert Channel.

This issue was referenced by b1ce4ca40c

This issue was referenced by b1ce4ca40c03ab2562863ef8056adc3b2aff5c10

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77997
No description provided.